--- a/site/public/index.html
+++ b/site/public/index.html
@@ -66,7 +66,9 @@
         <div class="jogosTabela" onclick="aparecerJogos()">
             JOGOS
         </div>
-        <div id="jogosJogos" class="abrirJogos" style="display: block;"></div>  
+        <div id="jogosJogos" class="abrirJogos" style="display: block;">
+            <div class="jogoJogo" onclick="location.href='html/BlackJack.html'">BlackJack</div>
+        </div>  
         <div class="jogosTabela" onclick="aparecerJogos1()">
             JOGOS AO VIVO
         </div>
