correção bugs blackJack

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Midas Gain</title>
 </head>
-<body id="corpo"onload="loadPropaganda()">
+<body id="corpo"onload="loadPropaganda(), validarSessao()">
     <div id="blur1" class="blur">
     <div id="header" class="header">
         <img  class="logo" src="imagens/logo.png" alt="">
