--- a/site/public/index.html
+++ b/site/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +8,31 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Midas Gain</title>
 </head>
-<body id="corpo"onload="loadPropaganda(), validarSessao()">
+
+<body id="corpo" onload="loadPropaganda(), validarSessao()">
     <div id="blur1" class="blur">
-    <div id="header" class="header">
-        <img  class="logo" src="imagens/logo.png" alt="">
-        <div id="money" class="money" style="display: none;"><b style="margin-top: 10px;">R$1000.00</b></div>
-        <div id="money1" class="money1" style="display: block;"></div>
-        <div id="dinheiro" class="dinheiro">
-            <div onclick="deposito()" class="depositar">Depositar</div>
-            <div class="sacar">Sacar</div>
+        <div id="header" class="header">
+            <img class="logo" src="imagens/logo.png" alt="">
+            <div id="money" class="money" style="display: none;"><b style="margin-top: 10px;">R$1000.00</b></div>
+            <div id="money1" class="money1" style="display: block;"></div>
+            <div id="dinheiro" class="dinheiro">
+                <div onclick="deposito()" class="depositar">Depositar</div>
+                <div onclick="sacarShow()" class="sacar">Sacar</div>
+            </div>
+            <div id="lista" class="lista">
+                <ul class="ul1">
+                    <li id="loginContent">Login</li>
+                    <li id="nomeUsuario" style="display: none;"></li>
+                </ul>
+                <ul class="ul2">
+                    <li id="cadastroContent">Cadastro</li>
+                </ul>
+                <ul class="ul3">
+                    <li id="contatoContent">Contato</li>
+                </ul>
+                <img id="logo1" class="logo1" src="imagens/tres pontos.png" alt="">
+            </div>
         </div>
-        <div id="lista" class="lista">
-            <ul class="ul1">
-                <li id="loginContent">Login</li>
-                <li id="nomeUsuario" style="display: none;"></li>
-            </ul>
-            <ul class="ul2">
-                <li id="cadastroContent">Cadastro</li>
-            </ul>
-            <ul class="ul3">
-                <li id="contatoContent">Contato</li>
-            </ul>
-            <img id="logo1" class="logo1" src="imagens/tres pontos.png" alt="">
-        </div>
-    </div>
     </div>
     <div id="containerLogin" class="containerLogin">
         <span class="loginInputs">Email</span> <br>
@@ -39,7 +41,7 @@
         <input id="senhaLogin_input" class="inputsLogin" type="password"> <br>
         <button onclick="entrar()" class="botaoLogin">Entrar</button> <br>
         <span class="problemaLogin">Esqueceu a senha</span>
-        <span class="problemaLogin">Não tem conta?</span>  
+        <span class="problemaLogin">Não tem conta?</span>
     </div>
     <div id="containerCadastro" class="containerCadastro">
         <div class="camposCadastro">
@@ -62,32 +64,37 @@
     </div>
     <div id="depositarContainer" class="containerCadastro">
         <div class="containerFormas">
-            <div id="cartaoForma" class="formas cartao" onclick="cartaoShow()"><img class="cartaoLogo" src="imagens\cartao.png" alt=""> Cartão</div>
-            <div id="boletoForma"  class="formas boleto" onclick="boletoShow()"><img class="boletoLogo" src="imagens/boleto.png" alt=""> Boleto</div>
-            <div id="pixForma" class="formas pix" onclick="pixShow()"><img class="boletoLogo pixLogo" src="imagens/pix.png" alt=""> <span>&nbsp</span>Pix</div>
+            <div id="cartaoForma" class="formas cartao" onclick="cartaoShow()"><img class="cartaoLogo"
+                    src="imagens\cartao.png" alt=""> Cartão</div>
+            <div id="boletoForma" class="formas boleto" onclick="boletoShow()"><img class="boletoLogo"
+                    src="imagens/boleto.png" alt=""> Boleto</div>
+            <div id="pixForma" class="formas pix" onclick="pixShow()"><img class="boletoLogo pixLogo"
+                    src="imagens/pix.png" alt=""> <span>&nbsp</span>Pix</div>
             <div class="boletoForm"></div>
             <div class="pixForm"></div>
         </div>
         <div id="cartaoDisplay">
-        <span class="qtdDepo qtdText">Quantidade do Deposito</span>
-        <div class="qtdDepo">
-            <input id="qtdInput" class="cartaoInput qtdInput" type="text">
-        </div>
-        <div class="cartaoForm">
-            <span class="cartaoInf">Numero do Cartão</span>&nbsp &nbsp &nbsp &nbsp &nbsp<span class="cartaoInf">Nome do Titular</span>
-            <input onkeypress="validarCartao()" id="numeroCartao" class="cartaoInput" type="text">
-            <input id="nomeTitular" class="cartaoInput" type="text">
-            <span class="cartaoInf">Data de Vencimento</span>&nbsp &nbsp &nbsp &nbsp<span class="cartaoInf">Codigo de Segurança</span>
-            <input onkeypress="validarData()" id="dataVenc" class="cartaoInput" type="text">
-            <input onkeypress="validarCodigo()" id="codigoSeg" class="cartaoInput" type="text">
-            <button class="botaoCartao" onclick="efectDep()">Efetuar Deposito</button>
-        </div>
+            <span class="qtdDepo qtdText">Quantidade do Deposito</span>
+            <div class="qtdDepo">
+                <input id="qtdInput" class="cartaoInput qtdInput" type="text">
+            </div>
+            <div class="cartaoForm">
+                <span class="cartaoInf">Numero do Cartão</span>&nbsp &nbsp &nbsp &nbsp &nbsp<span class="cartaoInf">Nome
+                    do Titular</span>
+                <input onkeypress="validarCartao()" id="numeroCartao" class="cartaoInput" type="text">
+                <input id="nomeTitular" class="cartaoInput" type="text">
+                <span class="cartaoInf">Data de Vencimento</span>&nbsp &nbsp &nbsp &nbsp<span class="cartaoInf">Codigo
+                    de Segurança</span>
+                <input onkeypress="validarData()" id="dataVenc" class="cartaoInput" type="text">
+                <input onkeypress="validarCodigo()" id="codigoSeg" class="cartaoInput" type="text">
+                <button class="botaoCartao" onclick="efectDep()">Efetuar Deposito</button>
+            </div>
         </div>
         <div id="boletoDisplay">
             <div class="boletoForm">
-            <span class="qtdDep">Quantidade do Deposito</span> <br>
-            <input class="boletoInput" type="text"> <br>
-            <button class="botaoBoleto">Gerar Boleto</button>
+                <span class="qtdDep">Quantidade do Deposito</span> <br>
+                <input class="boletoInput" type="text"> <br>
+                <button class="botaoBoleto">Gerar Boleto</button>
             </div>
         </div>
         <div id="pixDisplay">
@@ -96,37 +103,48 @@
                 <input class="boletoInput" type="text"> <br>
                 <button class="botaoBoleto">Gerar QRCode</button>
             </div>
+        </div>
     </div>
+    <div id="sacarContainer" class="containerCadastro">
+            <div class="pixForm">
+                <span style="font-size: 50px ;color: white; margin-left: 125px;">PIX</span> <br> <br>
+                <span style="color: white; margin-top: -50px; margin-left: 147px;">CPF</span>
+                <input type="text" class="saqueInput" id="cpfInput">
+                <span style="color: white; margin-left: 85px;">Quantide a Sacar</span>
+                <input type="text" class="saqueInput" id="qtdSacar">
+                <button onclick="sacar()" class="botaoSaque">Sacar</button>
+            </div>
     </div>
     </div>
     <div id="blur2">
-    <div id="containerCadastroHide" class="containerLoginHide"></div>
-    <div id="tabela" class="tabela">
-        <div class="jogosTabela" onclick="aparecerJogos()">
-            JOGOS
+        <div id="containerCadastroHide" class="containerLoginHide"></div>
+        <div id="tabela" class="tabela">
+            <div class="jogosTabela" onclick="aparecerJogos()">
+                JOGOS
+            </div>
+            <div id="jogosJogos" class="abrirJogos" style="display: block;">
+                <div class="jogoJogo" onclick="location.href='html/BlackJack.html'">BlackJack</div>
+            </div>
+            <div class="jogosTabela" onclick="aparecerJogos1()">
+                JOGOS AO VIVO
+            </div>
+            <div id="jogosJogos2" class="abrirJogos"></div>
+            <div class="jogosTabela" onclick="aparecerJogos2()">
+                SLOTS
+            </div>
+            <div id="jogosJogos3" class="abrirJogos"></div>
+            <div class="jogosTabela" onclick="location.href">
+                PROVEDORES
+            </div>
         </div>
-        <div id="jogosJogos" class="abrirJogos" style="display: block;">
-            <div class="jogoJogo" onclick="location.href='html/BlackJack.html'">BlackJack</div>
-        </div>  
-        <div class="jogosTabela" onclick="aparecerJogos1()">
-            JOGOS AO VIVO
+        <div class="propaganda">
+            <img id="imagem" class="imagem" src="imagens\campanha-bola-1200x480.jpg">
         </div>
-        <div id="jogosJogos2" class="abrirJogos"></div>
-        <div class="jogosTabela" onclick="aparecerJogos2()">
-            SLOTS
-        </div>
-        <div id="jogosJogos3" class="abrirJogos"></div>
-        <div class="jogosTabela" onclick="location.href">
-            PROVEDORES
-        </div>
-    </div>
-    <div class="propaganda">
-        <img id="imagem" class="imagem" src="imagens\campanha-bola-1200x480.jpg">
-    </div>
-    <div id="containerJogos" class="containerJogos"></div>
-    <div id="futter" class="futter"></div>
+        <div id="containerJogos" class="containerJogos"></div>
+        <div id="futter" class="futter"></div>
     </div>
 </body>
+
 </html>
 <script src="js/script.js"></script>
 <script src="js/cadastro.js"></script>
