--- a/site/public/index.html
+++ b/site/public/index.html
@@ -107,7 +107,8 @@
     </div>
     <div id="sacarContainer" class="containerCadastro">
             <div class="pixForm">
-                <span style="font-size: 50px ;color: white; margin-left: 125px;">PIX</span> <br> <br>
+                <span style="font-size: 40px ;color: white; margin-left: 134px;">PIX</span>
+                <img src="imagens\pix.png" alt="" class="imagemSaque"> <br> <br>
                 <span style="color: white; margin-top: -50px; margin-left: 147px;">CPF</span>
                 <input type="text" class="saqueInput" id="cpfInput">
                 <span style="color: white; margin-left: 85px;">Quantide a Sacar</span>
@@ -124,6 +125,7 @@
             </div>
             <div id="jogosJogos" class="abrirJogos" style="display: block;">
                 <div class="jogoJogo" onclick="location.href='html/BlackJack.html'">BlackJack</div>
+                <div class="jogoJogo" onclick="location.href='html/Mines.html'">Mines</div>
             </div>
             <div class="jogosTabela" onclick="aparecerJogos1()">
                 JOGOS AO VIVO
