--- a/site/public/html/Mines.html
+++ b/site/public/html/Mines.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BlackJack</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/blackjack.css">
+    <link rel="stylesheet" href="../css/Mines.css">
+    <title>Mines</title>
 </head>
 <body onload="validarSessao()">
     <div id="blur1" class="blur">
@@ -61,38 +62,9 @@
                 <span class="problemaCadastro">Problemas com o cadastro?</span>
             </div>
         </div>
-        <div id="blur2">
-            <div class="gameContainer">
-                <div id="resJogoWin" class="resJogoWin">
-                    <div id="dinheiroGanho" class="dinheiroWin">R$1000<br>x2<br>BlackJack</div>
-                    <div id="loadingBar1" class="loadingBar1"></div>
-                    <div id="loadingBar2" class="loadingBar2"></div>
-                </div>
-                <div id="oponente" class="oponente"></div>
-                <div id="pontos" class="pontos">
-                <span id="totalOponente"></span> <br><br>
-                <span id="totalJogador"></span>
-                </div>
-                <div id="jogador" class="jogador"></div>
-                <div id="apostaContainer" class="aposta">
-                    <span class="rs">R$:</span>
-                    <div class="apostaJogo">
-                        <div>
-                        <input class="inputAposta" type="number" id="inputAposta">
-                    </div>
-                    <div class="botaoAposta">
-                        <button class="botaoJogo" onclick="apostar()">Apostar</button> <button class="botaoJogo" onclick="dobrar()">Dobrar</button>
-                    </div>
-                    <div class="botaoInGame">
-                        <button id="botaoPedir" class="botaoPedir">Pedir Carta</button>
-                        <button style="cursor: defaut;" id="botaoParar" class="botaoPedir">Parar</button>
-                    </div>
-                    </div>
-                </div>
-            </div>
-        <div id="futter" class="futter" style="display: block;"></div>
+        <div class="gameContainerMines">
+            <div class="apostaMines"></div>
         </div>
+        <div id="futter" class="futter" style="display: block;"></div>
 </body>
 </html>
-<script src="../js/script.js"></script>
-<script src="../js/blackjack.js"></script>
