mines quase finalizado

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -124,6 +124,7 @@
             </div>
             <div id="jogosJogos" class="abrirJogos" style="display: block;">
                 <div class="jogoJogo" onclick="location.href='html/BlackJack.html'">BlackJack</div>
+                <div class="jogoJogo" onclick="location.href='html/Mines.html'">Mines</div>
             </div>
             <div class="jogosTabela" onclick="aparecerJogos1()">
                 JOGOS AO VIVO
