--- a/site/public/html/mines.html
+++ b/site/public/html/mines.html
@@ -90,7 +90,7 @@
                     <option value="23">23 Minas</option>
                     <option value="24">24 Minas</option>
                 </select> <br>  
-                <button class="apostaBotao" onclick="startMines()">Apostar</button> <br>
+                <button id="botaoIniciar" class="apostaBotao" onclick="startMines()">Apostar</button> <br>
                 <button id="botaoParar" class="apostaParar">Retirar </button>
             </div>
             <div id="mines1" class="mines1">
