--- a/site/public/html/mines.html
+++ b/site/public/html/mines.html
@@ -129,6 +129,11 @@
                 <div id="minesJogo" class="minesJogo"></div>
             </div>
         </div>
+        <div id="resJogoWin" class="resJogoWin">
+            <div id="dinheiroGanho" class="dinheiroWin">R$1000<br>x2<br>BlackJack</div>
+            <div id="loadingBar1" class="loadingBar1"></div>
+            <div id="loadingBar2" class="loadingBar2"></div>
+        </div>
         <div class="futter"></div>
 </body>
 </html> 
