--- a/site/public/html/mines.html
+++ b/site/public/html/mines.html
@@ -13,7 +13,7 @@
     <div id="blur1" class="blur">
         <div id="header" class="header">
             <img  onclick="location.href='../index.html'" class="logo" src="../imagens/logo.png" alt="">
-            <div id="money" class="money" style="display: none;"><b style="margin-top: 10px;">R$1000.00</b></div>
+            <div onclick="metricas()" id="money" class="money" style="display: none;"><b style="margin-top: 10px;">R$1000.00</b></div>
             <div id="money1" class="money1" style="display: block;"></div>
             <div id="dinheiro" class="dinheiro">
                 <div onclick="location.href='../index.html'" class="depositar">Depositar</div>
@@ -33,6 +33,13 @@
                 <img id="logo1" class="logo1" src="../imagens/tres pontos.png" alt="">
             </div>
         </div>
+        </div>
+        <div id="metricasS" class="metricas">
+            <div id="qtdRes" class="qtdRes"></div>
+            <div class="qtdInicial">
+                <div id="qtdInicio" class="qtdInicio"></div>
+                <div id="qtdAposta" class="qtdAposta"></div>
+            </div>
         </div>
         <div id="containerLogin" class="containerLogin">
             <span class="loginInputs">Email</span> <br>
