ranking de ganhos

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -9,7 +9,7 @@
     <title>Midas Gain</title>
 </head>
 
-<body id="corpo" onload="loadPropaganda(), validarSessao()">
+<body id="corpo" onload="loadPropaganda(), validarSessao(), listHist()">
     <div id="blur1" class="blur">
         <div id="header" class="header">
             <img class="logo" src="imagens/logo.png" alt="">
@@ -142,7 +142,8 @@
         <div class="propaganda">
             <img id="imagem" class="imagem" src="imagens\campanha-bola-1200x480.jpg">
         </div>
-        <div id="containerJogos" class="containerJogos"></div>
+        <div id="containerJogos" class="containerJogos">
+        </div>
         <div id="futter" class="futter"></div>
     </div>
 </body>
