--- a/site/public/index.html
+++ b/site/public/index.html
@@ -144,7 +144,9 @@
         </div>
         <div id="containerJogos" class="containerJogos">
         </div>
-        <div id="futter" class="futter"></div>
+        <div id="futter" class="futter"><div class="futI">Criado e Desenvolvido com amor <br> 
+            &nbsp &nbsp &nbsp &nbsp&nbsp&nbsp&nbsp por Vitor Gonçalves <br>
+            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspx1 um aluno SpTech</div> </div>
     </div>
 </body>
 
